--- a/Android/AndroidPrimeWorker/res/values/strings.xml
+++ b/Android/AndroidPrimeWorker/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Android Distributed Prime Worker</string>
     <string name="button_find_first_n_primes">Find First N Primes</string>
     <string name="button_find_next_prime">Find Next Prime</string>
-    <string name="prime_contribuition_message">You just got +1 point for contributing a prime!</string>     
+    <string name="prime_contribuition_message">You just got +1 point for contributing a prime!</string>
+    <string name="prime_biggest_prime_number_message">Android Distr. Prime Hunt has found first 2 primes. Biggest = 3</string> 
 </resources>
